<resources>
    <string name="app_name">PokeEASY</string>
    <string name="title_activity_pokemon_detail">Detail</string>
    <string name="title_tutorial_pokebank">Transfer quicker</string>
    <string name="text_done_button">DONE</string>
    <string name="message_tutorial_pokebank">Press and hold, then swipe and TRANSFER</string>
    <string name="title_tutorial_moves">Choose the best pokemon!</string>
    <string name="message_tutorial_moves">Check optimal movests for both gym offense and gym defense</string>
    <string name="nav_header_user_level">Level</string>
    <string name="nav_header_user_stardust">Stardust:</string>
    <string name="nav_header_user_pokebank_space">Pokemon space:</string>
    <string name="nav_header_user_bag_space">Objects space:</string>
    <string name="nav_fragment_transfer">Pokemon Bank</string>
    <string name="nav_fragment_bag">Objects</string>
    <string name="nav_fragment_map">Pokemon Finder</string>
    <string name="nav_sing_out">Logout</string>
    <string name="section_contact">Contact</string>
    <string name="nav_contact">Tell me what you think</string>
    <string name="message_connecting_with_pokemon_go">Connecting with the servers of Pokemon GO...</string>
    <string name="message_get_user_information">Obtaining user information...</string>
    <string name="message_get_account_information">Obtaining account information...</string>
    <string name="message_favorite_pokemon">added to favorites!</string>
    <string name="message_unfavorite_pokemon">deleted from favorites!</string>
    <string name="title_select_account">Sign in with:</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="description_img_back">Back arrow</string>
    <string name="description_img_profile">Profile</string>
    <string name="description_img_icon">Icono</string>
    <string name="action_start_service">View in background</string>
    <string name="action_location">Go to my location</string>
    <string name="action_filter">Filter</string>
    <string name="action_aplicar_filtros">APPLY</string>
    <string name="action_transferir">TRANSFER</string>
    <string name="snack_bar_error_with_pokemon">An error occurred</string>
    <string name="snack_bar_error_with_pokemon_positive_btn">Retry</string>
    <string name="snack_bar_error_with_pokemon_negative_btn">Later</string>
    <string name="snack_bar_neg_btn">Stop</string>
    <string name="snack_bar_error_with_internet_acces">Please check your internet connection</string>
    <string name="snack_bar_error_with_internet_acces_positive_btn">Go to settings</string>
    <string name="message_snackbar_searching_text">Looking for pokemon...</string>
    <string name="permission_access_coarse_location">The access to your location is necessary to be able to locate you in the map and thus to be able to find pokemon to your around.</string>
    <string name="action_snack_permission_access_coarse_location">Accept permission</string>
    <string name="permission_rationale">The access to the contacts is very useful, if you accept it, we will be able to offer you suggestions of your corres and thus you will not have to write them completely.</string>
    <string name="action_snack_intentarlo_ahora">Try it now</string>
    <string name="google_account_secure">GOOGLE ACCOUNT\n(recommended)</string>
    <string name="google_account_credentials">GOOGLE ACCOUNT\n(email and password)</string>
    <string name="ptc_account">PTC\n(Pokemon trainers)</string>
    <string name="prompt_token">Token (Ej. 4/18dn21...)</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_nickname">Nickname PTC</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_forget_account">Did you forget your password?</string>
    <string name="action_cant_login">Can not log in?</string>
    <string name="error_invalid_email">Enter a valid email!</string>
    <string name="error_invalid_password">Password is too short</string>
    <string name="error_incorrect_password">Password is incorrect!</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_login">Try again later</string>
    <string name="pick_account">You must select an account</string>
    <string name="terms">This application only reads data from your Pokemon Go account.\nThe developer will not be responsible if something happens to your account.\nThere is no guarantee that this will be permitted by Niantics terms of service.</string>
    <string name="dont_have_token">If you do not have a "TOKEN"</string>
    <string name="btn_request_token">Get a \nTOKEN</string>
    <string name="have_token">Otherwise, paste and press the send button</string>
    <string name="tv_note">Note: If TOKEN is invalid, the application may fail, please obtain a new TOKEN from the Google console and try again.</string>
    <string name="btn_send_token">SEND</string>
    <string name="filtro_all_markers">SHOW ALL</string>
    <string name="filtro_busqueda_markers">Search points</string>
    <string name="filtro_pokestops">POKESTOPS</string>
    <string name="op_normal_pokestop">Normal PokeStops</string>
    <string name="op_lured_pokestop">Lured PokeStops</string>
    <string name="filtro_gyms">GYMS</string>
    <string name="op_blue_gym">Mystics Gyms</string>
    <string name="op_red_gym">Valors Gyms</string>
    <string name="op_yellow_gym">Instincts Gyms</string>
    <string name="op_white_gym">Without equipment Gyms</string>
    <string name="location_alert_title">Failed to get location</string>
    <string name="location_alert_message">PokeEasy could not get your location, try again or move around the map</string>
    <string name="location_alert_pos_btn">Try again</string>
    <string name="location_alert_neg_btn">Cancel</string>
    <string name="location_alert_error">An error has occurred, please try again later!</string>
    <string name="service_not_available">Service not available</string>
    <string name="invalid_lat_long_used">Invalid latitude and longitude</string>
    <string name="no_address_found">We can not find the address</string>
    <string name="address_found">Address found</string>
    <string name="no_geocoder_available">Service not available</string>
    <string name="resume_alert_title">Start a new search?</string>
    <string name="resume_alert_message">Search cites have changed, do you want to continue with your current search or start a new one? If you start a new search all map markers will be deleted including (Pokeparadas, gymnastics, search places, pokemon)</string>
    <string name="resume_alert_pos_btn">Continue search</string>
    <string name="resume_alert_neg_btn">New search</string>
    <string name="permission_alert_title">Location services disabled</string>
    <string name="permission_alert_message">For the correct operation of the application, it is necessary that the location services are activated, you can activate them from the Settings of the application</string>
    <string name="open_location_settings">Activate</string>
    <string name="message_json_request_succes_1">We have found</string>
    <string name="message_json_request_succes_2">pokemon around, catch them all!</string>
    <string name="message_json_request_empty">For now there are no pokemon nearby, try again later!</string>
    <string name="message_json_request_error">An error has occurred, try again later!</string>
    <string name="text_hint_searchbar">Indicate location, eg. Santa Monica Pier, CA...</string>
    <string name="dialog_title_unaviable_service">Service not available!</string>
    <string name="dialog_content_unaviable_service">For now, all third-party tools, including bots and location maps, are NOT working. We are working to get everything back to normal very soon. \nGreetings!</string>
    <string name="dialog_positive_unaviable_service">Done</string>
    <string name="dialog_title_transfer_pokemons">Transferring pokemon</string>
    <string name="dialog_content_please_wait">Please wait...</string>
    <string name="title_selected">Selected</string>
    <string name="message_count_selected">Pokemon to transfer</string>
    <string name="message_untrasferable_favorite">You can not transfer a favorite pokemon</string>
    <string name="message_untrasferable">Now you can not transfer this pokemon, try later</string>
    <string name="text_btn_show_all">SEE ALL</string>
    <string name="text_pokemones">Pokemon</string>
    <string name="text_bar_recents">Recents</string>
    <string name="text_bar_name">Name</string>
    <string name="text_bar_number">Number</string>
    <string name="text_bar_attack">Attack</string>
    <string name="text_bar_defense">Defense</string>
    <string name="text_bar_stamina">Health</string>
    <string name="message_text_transfering">Transferring</string>
    <string name="message_text_canceling">Canceling...</string>
    <string name="text_no_pokemon">All pokemon has been transferred</string>
    <string name="group_pokeballs">POKE BALLS</string>
    <string name="group_incenses">INCENSES</string>
    <string name="group_potions">POTIONS</string>
    <string name="group_troydisks">TROY DISKS</string>
    <string name="group_eggs">EGGS</string>
    <string name="group_revives">REVIVES</string>
    <string name="group_berries">BERRIES</string>
    <string name="group_incubators">INCUBATORS</string>
    <string name="dialog_title_delete_items">Deleting items</string>
    <string name="dialog_title_select_items_pre">How many</string>
    <string name="dialog_title_select_items_post">do you want to throw?</string>
    <string name="dialog_title_select_items_total">Total:</string>
    <string name="dialog_positive_btn_items">Throw</string>
    <string name="message_items_deleted">thrown successfully!</string>
    <string name="title_items">Items</string>
    <string name="text_attack">Attack:</string>
    <string name="text_defense">Defense:</string>
    <string name="text_stamina">Health:</string>
    <string name="text_cp_max">CP Máx:</string>
    <string name="text_cp_mult">CP After Evol:</string>
    <string name="text_level">Level:</string>
    <string name="text_candies">Candies:</string>
    <string name="text_powerup">More power:</string>
    <string name="text_evolve">Evolve:</string>
    <string name="text_stardust">Stardust:</string>
    <string name="text_result_power_up">has increased its power!</string>
    <string name="message_un_powerup">can not increase his power!</string>
    <string name="message_un_power_up">Try later</string>
    <string name="text_result_evolve">has evolved to</string>
    <string name="message_un_evolve">can not evolve!</string>
    <string name="action_refresh">Refresh</string>
    <string name="dialog_title_rename">¡Set Nickname!</string>
    <string name="dialog_positive_btn_renames">Change</string>
    <string name="dialog_title_powerup">Do you want to power up</string>
    <string name="dialog_content_powerup_1">Current CP:</string>
    <string name="dialog_content_powerup_2">\nCP after power up:</string>
    <string name="dialog_positive_btn_powerup">YES</string>
    <string name="dialog_negative_btn_powerup">NO</string>
    <string name="dialog_title_evolve_1">Do you want to</string>
    <string name="dialog_title_evolve_2">evolve?</string>
    <string name="dialog_content_evolve_1">Current CP:</string>
    <string name="dialog_content_evolve_2">\nCP after evolution:</string>
    <string name="message_incorrect_password">Incorrect password</string>
    <string name="dialog_title_transfer">Do you want to transfer</string>
    <string name="dialog_content_transfer_1">¡You can not undo this action once you transfer!</string>
    <string name="ic_action_select_all">Select all</string>
</resources>