<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_transferir_compare"
        android:orderInCategory="90"
        android:title="@string/action_transferir"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_select_all"
        android:orderInCategory="100"
        android:title="@string/ic_action_select_all"
        android:icon="@drawable/ic_check_box_white_24dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_refresh_white_24dp"
        app:showAsAction="always" />
</menu>
