<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">


    <item android:id="@+id/action_location"
        android:orderInCategory="80"
        android:title="@string/action_location"
        app:showAsAction="always"
        android:icon="@drawable/ic_my_location_black_24dp"/>
    <!--android:orderInCategory="2"-->

    <item android:id="@+id/action_flter"
        android:orderInCategory="90"
        android:title="@string/action_filter"
        app:showAsAction="always"
        android:icon="@drawable/ic_filter_list_black_24dp"/>
    <!--android:orderInCategory="3-->

    <item
        android:id="@+id/action_start_service"
        android:orderInCategory="100"
        android:title="@string/action_start_service"
        app:showAsAction="never" />

</menu>
