<?xml version="1.0" encoding="utf-8"?>
<tabs>
    <tab
        id="@+id/tab_iv"
        icon="@drawable/ic_thumbs_up_down_black_24dp"
        title="IV"
        barColorWhenSelected="@color/colorPrimary"
        inActiveColor="@color/color_blanco"
        activeColor="@color/color_negro"/>
    <tab
        id="@+id/tab_cp"
        icon="@drawable/ic_fitness_center_black_24dp"
        title="CP"
        barColorWhenSelected="@color/colorPrimary"
        inActiveColor="@color/color_blanco"
        activeColor="@color/color_negro"/>
    <tab
        id="@+id/tab_attack"
        icon="@drawable/ic_whatshot_black_24dp"
        title="@string/text_bar_attack"
        barColorWhenSelected="@color/colorPrimary"
        inActiveColor="@color/color_blanco"
        activeColor="@color/color_negro"/>
    <tab
        id="@+id/tab_defense"
        icon="@drawable/ic_security_black_24dp"
        title="@string/text_bar_defense"
        barColorWhenSelected="@color/colorPrimary"
        inActiveColor="@color/color_blanco"
        activeColor="@color/color_negro"/>
    <tab
        id="@+id/tab_stamina"
        icon="@drawable/ic_local_hospital_black_24dp"
        title="@string/text_bar_stamina"
        barColorWhenSelected="@color/colorPrimary"
        inActiveColor="@color/color_blanco"
        activeColor="@color/color_negro"/>
</tabs>