<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/dont_have_token"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#d67601"/>

    <Button
        android:id="@+id/btn_getToken"
        android:text="@string/btn_request_token"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Small" />

    <EditText
        android:id="@+id/etv_token"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textStyle="bold"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/tv_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/tv_note"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textStyle="bold"
        android:textColor="#d67601"/>

</LinearLayout>