<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_drawable"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="com.javic.pokewhere.ActivityLogin">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/tv_login_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/action_sign_in"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            <include
                layout="@layout/layout_container_login_with_credentials" />

            <include
                layout="@layout/layout_container_login_with_token" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:text="@string/terms"
                android:textSize="@dimen/size_tv_terms"
                android:textColor="@color/color_background_user_profile"
                android:textStyle="bold"/>
        </LinearLayout>

    </ScrollView>

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_action_back"
        android:contentDescription="@string/description_img_back"
        android:tint="@color/colorPrimaryDark"
        android:background="@android:color/transparent"
        android:layout_margin="@dimen/padding_image_back"/>


</FrameLayout>

