<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_login_form_with_token"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="@dimen/padding_30"
    tools:showIn="@layout/activity_login"
    android:visibility="gone">

    <RelativeLayout
        android:id="@+id/layout_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:background="@color/color_blanco"
        android:elevation="4dp"
        android:padding="@dimen/padding_5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/token"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/padding_5"
                    android:gravity="center"
                    android:imeOptions="actionSend"
                    android:inputType="text"
                    android:maxLines="2" />
            </android.support.design.widget.TextInputLayout>


            <TextView
                android:id="@+id/tv_help_token"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:paddingTop="@dimen/padding_image_back"
                android:text="@string/action_cant_login"
                android:clickable="true"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <Button
                    android:id="@+id/btn_getToken"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginRight="@dimen/padding_5"
                    android:layout_marginEnd="@dimen/padding_5"
                    android:layout_weight="1"
                    android:background="@drawable/buttonshape"
                    android:shadowColor="@color/color_background_stroke_user_profile"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:text="@string/btn_request_token"
                    android:textColor="@color/color_blanco"
                    android:textSize="15sp"
                    android:layout_marginTop="22dp"
                    android:layout_marginBottom="10dp"/>

                <Button
                    android:id="@+id/btn_SendToken"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginLeft="@dimen/padding_5"
                    android:layout_marginStart="@dimen/padding_5"
                    android:layout_weight="1"
                    android:background="@drawable/buttonshape"
                    android:shadowColor="@color/color_background_stroke_user_profile"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:text="@string/btn_send_token"
                    android:textColor="@color/color_blanco"
                    android:textSize="15sp"
                    android:layout_marginTop="22dp"
                    android:layout_marginBottom="10dp"/>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

    <ImageButton
        android:id="@+id/user_profile_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/user_profile_image_background"
        android:contentDescription="@string/description_img_profile"
        android:elevation="4dp"
        android:padding="@dimen/padding_image_profile"
        android:src="@drawable/ic_trainer_boy" />
</RelativeLayout>