<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/content_login_form_with_credentials"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/padding_30"
        tools:showIn="@layout/activity_login"
    android:visibility="gone">

        <RelativeLayout
            android:id="@+id/layout_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_blanco"
            android:elevation="4dp"
            android:layout_marginTop="@dimen/margin_top"
            android:padding="@dimen/padding_5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_profle_circled"
                        android:drawablePadding="@dimen/padding_5"
                        android:drawableStart="@drawable/ic_profle_circled"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/padding_5"
                        android:drawableLeft="@drawable/ic_locked_circled"
                        android:drawableStart="@drawable/ic_locked_circled"
                        android:enabled="false"
                        android:hint="@string/prompt_password"
                        android:imeActionLabel="@string/prompt_password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>


                <TextView
                    android:id="@+id/tv_help"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:paddingTop="@dimen/padding_image_back"
                    android:text="@string/action_cant_login"
                    android:clickable="true"/>

                <Button
                    android:id="@+id/email_sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="22dp"
                    android:background="@drawable/buttonshape"
                    android:shadowColor="@color/color_background_stroke_user_profile"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:text="@string/action_sign_in"
                    android:textColor="@color/color_blanco"
                    android:textSize="15sp"
                    android:enabled="false"/>

            </LinearLayout>

        </RelativeLayout>

        <ImageButton
            android:id="@+id/user_profile_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_img_profile"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/user_profile_image_background"
            android:elevation="4dp"
            android:padding="@dimen/padding_image_profile"
            android:src="@drawable/ic_trainer_boy" />
    </RelativeLayout>